<resources>
    <string name="app_name">PhotoShare</string>

    <string name="title_activity_entrance">登陆注册页面</string>

    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>

    <string name="checkRemember">记住密码</string>

    <string name="welcome">"欢迎使用"</string>
    <string name="invalid_username">用户名已经存在</string>
    <string name="invalid_password">密码必须大于5位数</string>
    <string name="login_failed">"登陆失败"</string>

    <!-- userKey -->
    <string name="shared_preferences_file_name">sp_user_information</string>
    <string name="user_name">username</string>
    <string name="user_password">user_password</string>
    <string name="user_avatar">user_avatar</string>
    <string name="user_id">user_id</string>
    <string name="user_sex">user_sex</string>
    <string name="user_introduce">user_introduce</string>
    <string name="user_createTime">user_createTime</string>
    <string name="user_lastUpdateTime">user_lastUpdateTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>